# cip

./: .gitignore  CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt  alg5.cu  alloc.h  blue_noise.cpp  blue_noise.h  box_sampler.h  bspline3.h  bspline3_sampler.h  cactus-512-gray.pgm  config.h.in  cubic_sampler.h  cuda_traits.h  cutil.h  dimage.h  dvector.h  effects.h  error.h  filter.cu  filter.h  flowers_orig.ppm  hostdev.h  image.cpp  image.h  image_frame.cpp  image_frame.h  image_util.cu  image_util.h  linalg.h  linalg.hpp  math_util.h  mitchell_netravali.h  nlfilter.cpp  nlfilter_gui.fl  pixel_traits.h  recfilter.cu  recfilter.h  sacht_nehab3.h  sampler.h  symbol.h  (+12 more)
